# Tee-es-t

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  DEPLOY_PROMPT.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  ENVIRONMENT.md  Makefile  README.md  config.example.json  create_pdf.py  daleme-scoop-2.html  deploy-fly.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  fly.snb.toml  fly.toml  index.html  main.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  setup-production.sh  setup.sh  vite.config.js
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: commercial-agent-ci.yml  configure-railway.yml  deploy-api.yml  deploy-snb.yml  deploy-web.yml  mission-response.yml  netlify-deploy.yml  pages.yml  python-ci.yml  robot.yml  studentflow-ci.yml  studentflow-web-ci.yml
commercial-agent/: .env.example  DEPLOY_BACKUP.md  Dockerfile  README.md  agent_loop.py  autonomous.py  document_generator.py  fill_env.py  main.py  mission_prompts.py  mission_responder.py  open_keys.py  profile_kit.py  railway.json  render.yaml  requirements.txt  setup.sh  setup_gmail.py  update_status.py
commercial-agent/config/: routines.py  system_prompt.py
commercial-agent/tests/: conftest.py  test_smoke.py
commercial-agent/tools/: __init__.py  github_tools.py  gmail.py  http_utils.py  hubspot.py  lfds_pricing.py  livrables.py  notion.py
css/: normalize.css  style.css
dashboard/: index.html  netlify.toml  package-lock.json  package.json
dashboard/public/: manifest.json
dashboard/src/: App.jsx  index.css
docs/: INTEGRATION.md  architecture.html  contact.html  devis.html  documents.html  index.html  lfds-quiz-embed.html  livrables.html  missions.html  pipeline.html  portfolio.html  routines.html  sim-card-security-terms.md  status.json
docs/assets/: style.css
docs/data/: knowledge-base.json  test-missions.json
docs/documents/: index.json
docs/missions/: 20260418-120000-codeur-exemple-agent-commercial-hubspot.md  20260418-140000-malt-consultant-hubspot-revops-automation.md  20260418-141500-codeur-automatisation-python-taches-recurrentes.md  20260418-143000-freelance-info-developpeur-agent-ia-python-esn.md  index.json
docs/quiz/: index.html
dossier-ami/: CHECKLIST.md  README.md  SUIVI.csv  SUIVI.md
dossier-ami/prompts/: claude-code.md
dossier-ami/scripts/: build-pdf.py  init-dossier.sh  personalize.py
dossier-ami/specimens/: SPECIMENS.md
instagram_agent/: __init__.py  agent.py  comments.py  config.py  facebook_client.py  instagram_service.py  rate_limiter.py  targeting.py
netlify/functions/: admin-export.js  admin-stats.js  health.js  mission-list.js  quiz-submit.js  send-mission.js
scripts/: deploy-snb.sh
server/: hubspot.js  index.js
server/__tests__/: security.test.js
snb/: __init__.py  bootstrap.py
snb-agent/: .env.example  api.py  config.py  db.py  email_sender.py  main.py  models.py  notifier.py  profile.py  proposer.py  scorer.py
snb-agent/scrapers/: __init__.py  arbeitnow.py  base.py  codeur.py  freelancercom.py  guru.py  (+10 more)
src/: App.jsx  index.js  main.jsx
studentflow/: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  railway.toml  schema.sql  scoring_config.json
studentflow-web/: .env.example  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
studentflow/migrations/: 001_initial.sql  002_uber_grade.sql
studentflow/src/studentflow/: __init__.py  agents.py  api.py  cli.py  config.py  db.py  matching.py  models.py  realtime.py
studentflow/src/studentflow/notifiers/: __init__.py  base.py  email_smtp.py  webhook.py
studentflow/src/studentflow/scrapers/: __init__.py  adzuna.py  base.py  france_travail.py  hellowork.py  indeed.py  jobteaser.py  jooble.py  studentjob.py
studentflow/src/studentflow/utils/: __init__.py  geo.py  skills.py
studentflow/tests/: fixtures.py  test_agents.py  test_api.py  test_matching.py  test_models.py  test_notifiers.py  test_scrapers_adzuna.py  test_scrapers_hellowork.py  test_scrapers_indeed.py  test_scrapers_jooble.py  test_utils.py
test/: server.test.js
tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_core.py  test_pipelines.py  test_utils.py
(+139 files in other folders)
